add javascript function

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <form id="generate-form" class="mt-4">
 
-<input id="'url" type="url"
+<input id="url" type="url"
 placeholder="Enter a url"
 class="w-full border-2 border-gray-200 p-3 rounded text-gray-dark focus:outline-none mb-5"/>
 
@@ -76,7 +76,7 @@ class="w-full border-2 border-gray-200 p-3 rounded text-gray-dark focus:outline-
     </div>
 
     <!-- Generated QR Code -->
-    <div class="max-w-5xl m-auto flex flex-col text-center items-center mt-20">
+    <div id="generated" class="max-w-5xl m-auto flex flex-col text-center items-center mt-20">
 
         <!-- Spinner -->
         <div id="spinner" role="status">
