--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </div>
    </header>
    <main>
-    <div class="flex flex-col-reverse items-center justify-center md:max-w-4xl p-10">
+    <div class="flex flex-col-reverse m-auto md:items-center justify-center md:max-w-4xl p-10">
 
-        <div class="w-full md:w-2/3 mr-24">
+        <div class="w-full md:w-2/3 ">
 <h1 class="text-3xl font-bold mb-5 md:text-4xl">
     QR Code Generator
 </h1>
